# pragmatic_programmer_exercises

./: Cargo.toml  README.md
exercises/e02/: Cargo.toml
exercises/e02/src/: main.rs
exercises/e03/: Cargo.toml
exercises/e03/src/: main.rs
exercises/e04/: Cargo.toml
exercises/e05/: Cargo.toml
exercises/e05/src/: main.rs
exercises/e06/: Cargo.toml
exercises/e07/: Cargo.toml
exercises/e07/src/: main.rs
exercises/e08/src/: main.rs
exercises/e09/src/: main.rs
exercises/e1/: Cargo.toml
exercises/e1/src/: main.rs
exercises/e10/src/: main.rs
exercises/e11/: Cargo.toml
exercises/e11/src/: main.rs
exercises/e12/src/: main.rs
exercises/e13/: Cargo.toml
exercises/e13/src/: main.rs
exercises/e14/: Cargo.toml
exercises/e14/src/: main.rs
exercises/e15/: Cargo.toml
exercises/e15/src/: main.rs
exercises/e16/: Cargo.toml
exercises/e16/src/: main.rs
exercises/e17/: Cargo.toml
exercises/e17/src/: main.rs
exercises/e18/: Cargo.toml
exercises/e18/src/: main.rs
exercises/e19/: Cargo.toml
exercises/e19/src/: main.rs
exercises/e2/: Cargo.toml
exercises/e20/: Cargo.toml
exercises/e20/src/: main.rs
exercises/e21/: Cargo.toml
exercises/e21/src/: main.rs
exercises/e22/: Cargo.toml
exercises/e22/src/: main.rs
exercises/e23/: Cargo.toml
exercises/e23/src/: main.rs
exercises/e24/: Cargo.toml
exercises/e25/: Cargo.toml
exercises/e26/: Cargo.toml
exercises/e27/: Cargo.toml
exercises/e28/: Cargo.toml
exercises/e29/: Cargo.toml
exercises/e3/: Cargo.toml
exercises/e30/: Cargo.toml
exercises/e31/: Cargo.toml
exercises/e32/: Cargo.toml
exercises/e33/: Cargo.toml
exercises/e34/: Cargo.toml
exercises/e35/: Cargo.toml
exercises/e36/: Cargo.toml
exercises/e37/: Cargo.toml
exercises/e38/: Cargo.toml
exercises/e39/: Cargo.toml
exercises/e4/: Cargo.toml
exercises/e40/: Cargo.toml
exercises/e41/: Cargo.toml
exercises/e42/: Cargo.toml
exercises/e43/: Cargo.toml
exercises/e44/: Cargo.toml
exercises/e45/: Cargo.toml
exercises/e46/: Cargo.toml
exercises/e47/: Cargo.toml
exercises/e48/: Cargo.toml
exercises/e5/: Cargo.toml
exercises/e6/: Cargo.toml
exercises/e7/: Cargo.toml
exercises/e8/: Cargo.toml
exercises/e9/: Cargo.toml
(+36 files in other folders)
