[workspace]
resolver = "2"
members = ["exercises/e1", "exercises/e10", "exercises/e11", "exercises/e12", "exercises/e13", "exercises/e14", "exercises/e15", "exercises/e16", "exercises/e17", "exercises/e18", "exercises/e19", "exercises/e2", "exercises/e20", "exercises/e21", "exercises/e22", "exercises/e23", "exercises/e24", "exercises/e25", "exercises/e26", "exercises/e27", "exercises/e28", "exercises/e29", "exercises/e3", "exercises/e30", "exercises/e31", "exercises/e32", "exercises/e33", "exercises/e34", "exercises/e35", "exercises/e36", "exercises/e37", "exercises/e38", "exercises/e39", "exercises/e4", "exercises/e40", "exercises/e41", "exercises/e42", "exercises/e43", "exercises/e5", "exercises/e6", "exercises/e7", "exercises/e8", "exercises/e9"]
